--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,6 +73,7 @@
     <string name="twentyone_to_twentytwo">21 - 22</string>
     <string name="twentytwo_to_twentythree">22 - 23</string>
     <string name="twentythree_to_twentyfour">23 - 24</string>
+    <string name="save_day">SAVE</string>
 
 
     <!--coachArea-->
