--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,6 +98,10 @@
     <string name="book">BOOK</string>
     <string name="n_games">N Games</string>
 
+    <!--coachReservation-->
+    <string name="coachReservation">COACH RESERVATION</string>
+    <string name="bookingCalendar">BOOKING CALENDAR</string>
+    <string name="expectedCost">EXPECTED COST</string>
 
     <!--eloSpinner-->
     <string-array name="elo_list">
