--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,6 +98,7 @@
     <!--reservationList-->
     <string name="reservationList">RESERVATION FOR THE DAY : \n</string>
     <string name="back"> BACK </string>
+    <string name="notAvailable">Coach Not Available Today</string>
 
     <!--reservation-->
     <string name="delete">DELETE</string>
