--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,6 +106,7 @@
 
     <!--upgrade-->
     <string name="upgrade">UPGRADE TO COACH</string>
+    <string name="updateInfo">UPDATE INFORMATIONS</string>
 
     <!--eloSpinner-->
     <string-array name="elo_list">
