--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,6 +103,8 @@
 
     <!--reservation-->
     <string name="delete">DELETE</string>
+    <string name="rate">RATE</string>
+    <string name="rateCoach">RATE THE COACH</string>
 
     <!--upgrade-->
     <string name="upgrade">UPGRADE TO COACH</string>
@@ -137,9 +139,6 @@
         <item>Adc</item>
         <item>Support</item>
     </string-array>
-    <string name="title_activity_test">test</string>
-    <string name="action_settings">Settings</string>
-    <string name="section_format">Hello World from section: %1$d</string>
 
 
 </resources>
